--- a/apps/party-time-frontend/project.json
+++ b/apps/party-time-frontend/project.json
@@ -53,11 +53,11 @@
       "executor": "@angular-devkit/build-angular:dev-server",
       "configurations": {
         "production": {
-          "browserTarget": "party-time-frontend:build:production"
+          "buildTarget": "party-time-frontend:build:production"
         },
         "development": {
-          "browserTarget": "party-time-frontend:build:development",
-          "proxyConfig": "apps/party-time-frontend/proxy.config.json"
+          "proxyConfig": "apps/party-time-frontend/proxy.config.json",
+          "buildTarget": "party-time-frontend:build:development"
         }
       },
       "defaultConfiguration": "development"
@@ -65,31 +65,18 @@
     "extract-i18n": {
       "executor": "@angular-devkit/build-angular:extract-i18n",
       "options": {
-        "browserTarget": "party-time-frontend:build"
+        "buildTarget": "party-time-frontend:build"
       }
     },
     "lint": {
-      "executor": "@nx/linter:eslint",
-      "outputs": ["{options.outputFile}"],
-      "options": {
-        "lintFilePatterns": [
-          "apps/party-time-frontend/**/*.ts",
-          "apps/party-time-frontend/**/*.html"
-        ]
-      }
+      "executor": "@nx/eslint:lint",
+      "outputs": ["{options.outputFile}"]
     },
     "test": {
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "apps/party-time-frontend/jest.config.ts",
-        "passWithNoTests": true
-      },
-      "configurations": {
-        "ci": {
-          "ci": true,
-          "codeCoverage": true
-        }
+        "jestConfig": "apps/party-time-frontend/jest.config.ts"
       }
     },
     "serve-static": {
