--- a/package.json
+++ b/package.json
@@ -18,12 +18,12 @@
     "@ngrx/entity": "17.0.1",
     "@ngrx/router-store": "17.0.1",
     "@ngrx/store": "17.0.1",
+    "@nx/angular": "18.0.4",
     "@types/gsap": "^3.0.0",
     "gsap": "^3.11.5",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "0.14.4",
-    "@nx/angular": "18.0.4"
+    "zone.js": "0.14.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "17.1.3",
@@ -37,8 +37,13 @@
     "@angular/language-service": "17.1.3",
     "@ngrx/schematics": "17.0.1",
     "@ngrx/store-devtools": "17.0.1",
+    "@nx/cypress": "18.0.4",
+    "@nx/eslint": "18.0.4",
+    "@nx/eslint-plugin": "18.0.4",
+    "@nx/jest": "18.0.4",
     "@nx/js": "18.0.4",
     "@nx/storybook": "18.0.4",
+    "@nx/web": "18.0.4",
     "@nx/workspace": "18.0.4",
     "@nxrocks/nx-spring-boot": "^9.2.2",
     "@schematics/angular": "17.1.3",
@@ -49,6 +54,9 @@
     "@storybook/angular": "7.6.15",
     "@storybook/core-common": "^7.2.1",
     "@storybook/core-server": "7.6.15",
+    "@swc-node/register": "~1.8.0",
+    "@swc/core": "~1.3.85",
+    "@swc/helpers": "~0.5.2",
     "@tailwindcss/forms": "^0.5.3",
     "@types/jest": "^29.4.0",
     "@types/node": "^18.16.9",
@@ -66,6 +74,7 @@
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
     "jest-preset-angular": "13.1.6",
+    "jsonc-eslint-parser": "^2.1.0",
     "nx": "18.0.4",
     "postcss": "^8.4.5",
     "prettier": "^2.8.8",
@@ -76,11 +85,6 @@
     "ts-jest": "29.1.1",
     "ts-node": "10.9.1",
     "typescript": "5.3.3",
-    "webpack": "^5.64.0",
-    "@nx/eslint-plugin": "18.0.4",
-    "@nx/cypress": "18.0.4",
-    "@nx/jest": "18.0.4",
-    "@nx/web": "18.0.4",
-    "@nx/eslint": "18.0.4"
+    "webpack": "^5.64.0"
   }
 }
