--- a/apps/party-time-frontend-17/project.json
+++ b/apps/party-time-frontend-17/project.json
@@ -8,19 +8,25 @@
   "targets": {
     "build": {
       "executor": "@angular-devkit/build-angular:browser",
-      "outputs": ["{options.outputPath}"],
+      "outputs": [
+        "{options.outputPath}"
+      ],
       "options": {
         "outputPath": "dist/apps/party-time-frontend-17/",
         "index": "apps/party-time-frontend-17//src/index.html",
         "main": "apps/party-time-frontend-17//src/main.ts",
-        "polyfills": ["zone.js"],
+        "polyfills": [
+          "zone.js"
+        ],
         "tsConfig": "apps/party-time-frontend-17//tsconfig.app.json",
         "inlineStyleLanguage": "scss",
         "assets": [
           "apps/party-time-frontend-17//src/favicon.ico",
           "apps/party-time-frontend-17//src/assets"
         ],
-        "styles": ["apps/party-time-frontend-17//src/styles.scss"],
+        "styles": [
+          "apps/party-time-frontend-17//src/styles.scss"
+        ],
         "scripts": []
       },
       "configurations": {
@@ -45,7 +51,13 @@
           "vendorChunk": true,
           "extractLicenses": false,
           "sourceMap": true,
-          "namedChunks": true
+          "namedChunks": true,
+          "fileReplacements": [
+            {
+              "replace": "apps/party-time-frontend-17/src/environments/environment.ts",
+              "with": "apps/party-time-frontend-17/src/environments/environment.development.ts"
+            }
+          ]
         }
       },
       "defaultConfiguration": "production"
@@ -73,7 +85,9 @@
     },
     "test": {
       "executor": "@nx/jest:jest",
-      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
+      "outputs": [
+        "{workspaceRoot}/coverage/{projectRoot}"
+      ],
       "options": {
         "jestConfig": "apps/party-time-frontend-17/jest.config.ts"
       }
