--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -66,7 +66,8 @@
         "github.vscode-pull-request-github",
         "tomoki1207.pdf",
         "ms-python.python",
-        "njpwerner.autodocstring"
+        "njpwerner.autodocstring",
+        "ritwickdey.LiveServer"
       ],
       "settings": {
         "prettier.configPath": ".prettierrc",
