--- a/apps/party-time-frontend-17/project.json
+++ b/apps/party-time-frontend-17/project.json
@@ -81,7 +81,8 @@
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "apps/party-time-frontend-17/jest.config.ts"
+        "jestConfig": "apps/party-time-frontend-17/jest.config.ts",
+        "codeCoverage": true
       }
     },
     "serve-static": {
