--- a/apps/party-time-frontend/project.json
+++ b/apps/party-time-frontend/project.json
@@ -44,7 +44,13 @@
           "vendorChunk": true,
           "extractLicenses": false,
           "sourceMap": true,
-          "namedChunks": true
+          "namedChunks": true,
+          "fileReplacements": [
+            {
+              "replace": "apps/party-time-frontend/src/environments/environment.ts",
+              "with": "apps/party-time-frontend/src/environments/environment.development.ts"
+            }
+          ]
         }
       },
       "defaultConfiguration": "production"
@@ -76,7 +82,8 @@
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "apps/party-time-frontend/jest.config.ts"
+        "jestConfig": "apps/party-time-frontend/jest.config.ts",
+        "codeCoverage": true
       }
     },
     "serve-static": {
