fix for frontend page loading

--- a/apps/party-time-frontend-17/project.json
+++ b/apps/party-time-frontend-17/project.json
@@ -58,6 +58,9 @@
     },
     "serve": {
       "executor": "@angular-devkit/build-angular:dev-server",
+      "options": {
+        "host": "0.0.0.0"
+      },
       "configurations": {
         "production": {
           "buildTarget": "party-time-frontend-17:build:production"
