--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@angular/platform-browser": "17.1.3",
     "@angular/platform-browser-dynamic": "17.1.3",
     "@angular/router": "17.1.3",
+    "@ng-matero/extensions": "^17.3.0",
     "@ngrx/component-store": "17.0.1",
     "@ngrx/effects": "17.0.1",
     "@ngrx/entity": "17.0.1",
