--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -79,9 +79,7 @@
         "plantuml.exportOutDir": "docs/.requirements",
         "plantuml.exportIncludeFolderHeirarchy": true,
         "plantuml.exportSubFolder": false,
-        "plantuml.jarArgs": [
-          "-DPLANTUML_LIMIT_SIZE=8192"
-        ],
+        "plantuml.jarArgs": ["-DPLANTUML_LIMIT_SIZE=8192"],
         "plantuml.jar": "plantuml-release.jar",
         "prettier.prettierPath": "./node_modules/prettier",
         "markdownlint.config": {
