remove tests from json docs

--- a/apps/party-time-frontend-17/-e2e/project.json
+++ b/apps/party-time-frontend-17/-e2e/project.json
@@ -20,7 +20,7 @@
         },
         "demo":{
           "watch": true,
-          "command": "npx nx run wordle-time-backend-backend:serve & npx nx run party-time-frontend-17:serve:development"
+          "command": "npx nx run wordle-time-backend-backend:serve & npx nx run party-time-frontend-17:serve:production"
         }
       }
     },
